--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
                               Dropdown link
                             </a>
                           
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <a class="dropdown-item" href="#">Something else here</a>
+                            <div class="dropdown-menu" aria-labelledby="Afspeellijst">
                             </div>
                           </div>
                       </div>
