--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="dropdown">
                             <p class="font-weight-bold text-white">Kies je borrelmuziek</p>
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dropdown link
+                              Afspeellijsten
                             </a>
                           
                             <div class="dropdown-menu" aria-labelledby="Afspeellijst">
