--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-dark bg-transparent">
+        <!-- <nav class="navbar navbar-dark bg-transparent">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        </nav>
+        </nav> -->
     </div>
 
     <div class="countdown countdown-container container">
