changed init call

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Vrijmibo!</title>
 </head>
 
-<body>
+<body onload="init()">
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
