changed init call

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
 
-    <title>Vrijmibo!</title>
+    <title id="title">Vrijmibo!</title>
 </head>
 
 <body onload="init()">
