--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
 
-    <title id="title">Vrijmibo!</title>
+    <title>Vrijmibo!</title>
 </head>
 
 <body onload="init()">
@@ -57,7 +57,7 @@
     <div class="countdown countdown-container container">
         <div class="row title">
             <span>Het is</span>
-            <h1 class="font-effect-anaglyph">VRIJMIBO</h1>
+            <h1 id="title" class="font-effect-anaglyph">VRIJMIBO</h1>
             <span>over:</span>
         </div>
         <div class="clock row">
