--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
 
     <title>Vrijmibo!</title>
@@ -19,7 +20,9 @@
             <div class="bg-dark p-4">
                 <div class="connect hidden">
                         <h5 class="text-white h4">Connect Spotify</h5>
-                        <button type="button" class="btn btn-success" onclick="authenticateSpotify()">Let's Go!</button> 
+                        <button type="button" class="btn btn-success" onclick="authenticateSpotify()">Let's Go!</button>
+                        <h5 class="text-white h4">Party Time!</h5>
+                        <input id="party-toggle" type="checkbox" checked data-toggle="toggle"> 
                 </div>
                 <div class="container connected">
                     <div class="row">
@@ -134,12 +137,13 @@
     <!-- /.countdown-wrapper -->
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/kinetic.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/jquery.final-countdown.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/js-cookie.js"></script>
     <script type="text/javascript" src="https://sdk.scdn.co/spotify-player.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/app.js"></script>
