dion is anal about this being beside spotify button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="https://demianmelskens.github.io/Dionrats.github.io/assets/css/demo.css">
 
     <title>Vrijmibo!</title>
 </head>
@@ -19,10 +19,12 @@
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
                 <div class="connect hidden">
-                        <h5 class="text-white h4">Connect Spotify</h5>
-                        <button type="button" class="btn btn-success" onclick="authenticateSpotify()">Let's Go!</button>
-                        <h5 class="text-white h4">Party Time!</h5>
-                        <input id="party-toggle" type="checkbox" checked data-toggle="toggle"> 
+                    <h5 class="text-white h4">Connect Spotify</h5>
+                    <button type="button" class="btn btn-success" onclick="authenticateSpotify()">Let's Go!</button> 
+                </div>
+                <div>
+                    <h5 class="text-white h4">Party Time!</h5>
+                    <input id="party-toggle" type="checkbox" checked data-toggle="toggle">
                 </div>
                 <div class="container connected">
                     <div class="row">
@@ -146,7 +148,7 @@
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/js-cookie.js"></script>
     <script type="text/javascript" src="https://sdk.scdn.co/spotify-player.js"></script>
-    <script type="text/javascript" src="https://dionrats.github.io/assets/js/app.js"></script>
+    <script type="text/javascript" src="https://demianmelskens.github.io/Dionrats.github.io/assets/js/app.js"></script>
 
 </body>
 
