--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
-                <div class="connect hidden">
+                <div class="connect hidden col-2">
                     <h5 class="text-white h4">Connect Spotify</h5>
                     <button type="button" class="btn btn-success" onclick="authenticateSpotify()">Let's Go!</button> 
                 </div>
-                <div>
+                <div class="col-2">
                     <h5 class="text-white h4">Party Time!</h5>
                     <input id="party-toggle" type="checkbox" checked data-toggle="toggle">
                 </div>
