--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://demianmelskens.github.io/Dionrats.github.io/assets/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="https://dionrats.github.io/assets/css/demo.css">
 
     <title>Vrijmibo!</title>
 </head>
@@ -148,7 +148,7 @@
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script type="text/javascript" src="https://dionrats.github.io/assets/js/js-cookie.js"></script>
     <script type="text/javascript" src="https://sdk.scdn.co/spotify-player.js"></script>
-    <script type="text/javascript" src="https://demianmelskens.github.io/Dionrats.github.io/assets/js/app.js"></script>
+    <script type="text/javascript" src="https://dionrats.github.io/assets/js/app.js"></script>
 
 </body>
 
