--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body onload="init()">
+    <audio id="timeeffect">
+        <source src="https://dionrats.github.io/assets/sound/Air-Horn-Sound-Effect.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>      
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
