--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <div class="countdown countdown-container container">
         <div class="row title">
             <span>Het is</span>
-            <h1 id="title" class="font-effect-anaglyph">VRIJMIBO</h1>
+            <!-- <h1 id="title" class="font-effect-anaglyph">VRIJMIBO</h1> -->
+                        <h1 id="title" class="font-effect-anaglyph">SUPER AMAZING DINSDAG</h1>
+
             <span>over:</span>
         </div>
         <div class="clock row">
