--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row title">
             <span>Het is</span>
             <!-- <h1 id="title" class="font-effect-anaglyph">VRIJMIBO</h1> -->
-                        <h1 id="title" class="font-effect-anaglyph">SUPER AMAZING DINSDAG</h1>
+                        <h1 id="title" class="font-effect-anaglyph">SUPER AMAZING DINSDAG BORREL</h1>
 
             <span>over:</span>
         </div>
